--- a/www/index.html
+++ b/www/index.html
@@ -66,8 +66,6 @@
       <div data-page="index" class="page">
 
 
-
-
         <div class="navbar no-shadow no-harline navbar-home">
           <div id="navbar" class="navbar-inner school-header">
             <div class="left">
@@ -94,12 +92,12 @@
             <i class="icon material-icons">close</i>
           </a>
           <!-- FAB speed dial actions with labels -->
-          <div class="fab-buttons fab-buttons-top">
-            <a href="#" class="fab-label-button">
+          <div class="fab-buttons fab-buttons-top fab-morf" data-morph-to=".card-block">
+            <a href="#" class="fab-label-button fab-close">
               <i class="icon material-icons" style="font-size: 15pt">message</i>
               <span class="fab-label">New Chat</span>
             </a>
-            <a href="#" class="fab-label-button">
+            <a href="/new-event-screen/" class="fab-label-button fab-close">
               <i class="icon material-icons">event_note</i>
               <span class="fab-label">New Event</span>
             </a>
