--- a/www/index.html
+++ b/www/index.html
@@ -116,6 +116,8 @@
             <div id="event-swiper" class="swiper-wrapper">
 
 
+
+
             </div>
           </div>
           <div class="card-block no-margin-top">
@@ -238,7 +240,6 @@
 
   <script type="text/javascript" src="js/framework7.bundle.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
-  <script type="text/javascript" src="js/chat.js"></script>
 
 
   <!-- Firebase stuff-->
@@ -287,7 +288,7 @@
           loadSchoolChats();
           loadSubscribedChats();
           //addMessage("school of ross", "room1", "hi this is the message you should be reading ");
-          loadChatMessages("school of ross", "room1");
+          //  loadChatMessages("school of ross", "room1");
         });
 
         //close the login screen if it is open
