--- a/www/pages/chat.html
+++ b/www/pages/chat.html
@@ -1,35 +1,9 @@
-<div class="page" data-page="chat">
-  <div class="panel panel-right panel-reveal panel-resizable">
-    <div class="list no-hairlines">
-      <div class="list-title">Members</div>
-      <ul>
-        <a href="#" class="item-link no-chevron">
-          <li class="item-content">
-            <div class="item-media"><i class="material-icons">person</i></div>
-            <div class="item-inner">Krombopulos Mike</div>
-          </li>
-        </a>
-        <a href="#" class="item-link no-chevron">
-          <li class="item-content">
-            <div class="item-media"><i class="material-icons">person</i></div>
-            <div class="item-inner">Jane Smith</div>
-          </li>
-        </a>
-
-      </ul>
-    </div>
-    <div class="hairline"></div>
-    <div class="row justify-content-center" style="margin: 16px"><a class="link panel-close text-align-center">Leave Group</a></div>
-  </div>
+<div class="page">
   <div class="navbar">
     <div class="navbar-inner">
-      <div class="left"><a class="link back icon-only"><i class="material-icons">arrow_back</i></a></div>
-      <div id="group-name" class="title">Chat Group Name</div>
-      <div class="right"><a href="#" class="link panel-open icon-only" data-panel="right"><i class="material-icons">more_vert</i></a></div>
+      <div class="title">Messages</div>
     </div>
   </div>
-
-
   <div class="toolbar messagebar">
     <div class="toolbar-inner">
       <div class="messagebar-area">
@@ -37,7 +11,6 @@
       </div><a class="link send-link" href="#">Send</a>
     </div>
   </div>
-
   <div class="page-content messages-content">
     <div class="messages">
       <!-- Messages title -->
@@ -47,8 +20,11 @@
         <div class="message-avatar" style="background-image:url(https://cdn.framework7.io/placeholder/people-100x100-7.jpg);"></div>
         <div class="message-content">
           <div class="message-name">John Doe</div>
+          <div class="message-header">Message header</div>
           <div class="message-bubble">
+            <div class="message-text-header">Text header</div>
             <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            <div class="message-text-footer">Text footer</div>
           </div>
           <div class="message-footer">Message footer</div>
         </div>
@@ -58,12 +34,16 @@
         <div class="message-avatar" style="background-image:url(https://cdn.framework7.io/placeholder/people-100x100-7.jpg);"></div>
         <div class="message-content">
           <div class="message-name">John Doe</div>
+          <div class="message-header">Message header</div>
           <div class="message-bubble">
+            <div class="message-text-header">Text header</div>
             <div class="message-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit.</div>
+            <div class="message-text-footer">Text footer</div>
           </div>
           <div class="message-footer">Message footer</div>
         </div>
       </div>
+      <!-- Messages -->
 
 
     </div>
