--- a/www/index.html
+++ b/www/index.html
@@ -75,7 +75,7 @@
             </div>
             <div>
               <h1>School Of Ross</h1>
-              <p>32 Members | 12 Groups | 7 Events</p>
+              <p>32 Members | 12 Chats | 7 Events</p>
             </div>
             <div class="right">
               <a href="/profile-screen/" class="link icon-only">
@@ -157,12 +157,9 @@
             <div class="title">Unsubscribed Chats</div>
             <div class="hairline"></div>
 
-            <div id="school-group-chats-skeleton" class="list media-list skeleton-text no-hairlines no-hairlines-between">
+            <div id="school-group-chats-skeleton" class="list media-list skeleton-text no-hairlines no-hairlines-between no-margin">
               <ul>
                 <li class="item-content skeleton-effect-pulse">
-                  <div class="item-media">
-                    <div class="skeleton-block" style="width: 40px; height: 40px; border-radius: 50%"></div>
-                  </div>
                   <div class="item-inner">
                     <div class="item-title-row">
                       <div class="item-title">This is Title</div>
@@ -174,9 +171,6 @@
                   </div>
                 </li>
                 <li class="item-content skeleton-effect-pulse">
-                  <div class="item-media">
-                    <div class="skeleton-block" style="width: 40px; height: 40px; border-radius: 50%"></div>
-                  </div>
                   <div class="item-inner">
                     <div class="item-title-row">
                       <div class="item-title">This is Title</div>
