--- a/www/pages/preview_chat.html
+++ b/www/pages/preview_chat.html
@@ -1,4 +1,4 @@
-<div class="page" data-page="chat">
+<div class="page" data-page="preview-chat">
   <div class="panel panel-right panel-reveal panel-resizable">
     <div class="list no-hairlines">
       <div class="list-title">Members</div>
@@ -18,27 +18,30 @@
 
       </ul>
     </div>
-    <div class="hairline"></div>
-    <div class="row justify-content-center" style="margin: 16px"><a onclick="unsubscribeFromChat()" class="link panel-close text-align-center back">Leave Group</a></div>
   </div>
-  <div class="navbar">
+  <div class="navbar no-shadow">
     <div class="navbar-inner">
       <div class="left"><a class="link back icon-only"><i class="material-icons">arrow_back</i></a></div>
-      <div id="group-name" class="title">Chat Group Name</div>
+      <div class="title">Chat Name</div>
+
       <div class="right"><a href="#" class="link panel-open icon-only" data-panel="right"><i class="material-icons">people</i></a></div>
     </div>
   </div>
 
+  <div class="chat-description">
+    <p>this is a chat description. this is a chat description. this is a chat description. this is a chat description. this is a chat description.</p>
+  </div>
 
-  <div class="toolbar messagebar">
-    <div class="toolbar-inner">
-      <div class="messagebar-area">
-        <textarea class="resizable" placeholder="Message"></textarea>
-      </div><a class="link send-link" href="#">Send</a>
+
+  <div class="toolbar toolbar-bottom">
+    <div class="toolbar-inner justify-content-center">
+      <a onclick="subscribeToChat()" class="link">Subscribe to Chat</a>
     </div>
   </div>
 
+
   <div class="page-content messages-content">
+
     <div class="messages">
       <!-- Messages title -->
       <div class="messages-title"><b>Sunday, Feb 9,</b> 12:58</div>
@@ -64,8 +67,6 @@
           <div class="message-footer">Message footer</div>
         </div>
       </div>
-
-
     </div>
   </div>
 </div>
