--- a/www/pages/profile.html
+++ b/www/pages/profile.html
@@ -12,7 +12,7 @@
         </a>
       </div>
     </div>
-    <img src="media/profile-bump.png" class="profile-bump" />
+    <img src="media/profile-bump.png" class="profile-bump" style="border-radius: 0" />
     <div class="profile-pic"></div>
   </div>
   <div class="block no-margin-top">
