--- a/www/pages/edit_profile.html
+++ b/www/pages/edit_profile.html
@@ -26,7 +26,7 @@
             <div class="item-inner">
               <div class="item-title item-floating-label">First Name</div>
               <div class="item-input-wrap">
-                <input type="text">
+                <input id="firstName" type="text">
                 <span class="input-clear-button"></span>
               </div>
             </div>
@@ -35,7 +35,7 @@
             <div class="item-inner">
               <div class="item-title item-floating-label">Last Name</div>
               <div class="item-input-wrap">
-                <input type="text">
+                <input id="lastName" type="text">
                 <span class="input-clear-button"></span>
               </div>
             </div>
@@ -44,14 +44,14 @@
             <div class="item-inner">
               <div class="item-title item-floating-label">Password</div>
               <div class="item-input-wrap">
-                <input type="password">
+                <input id="password" type="password">
                 <span class="input-clear-button"></span>
               </div>
             </div>
           </li>
         </ul>
       </div>
-      <button class="button">Save</button>
+      <button class="button" onclick="editUserData()">Save</button>
     </div>
   </div>
 </div>
