cleaned up some code

--- a/www/index.html
+++ b/www/index.html
@@ -236,6 +236,8 @@
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/chats.js"></script>
   <script type="text/javascript" src="js/user.js"></script>
+  <script type="text/javascript" src="js/events.js"></script>
+
 
 
 
