--- a/www/index.html
+++ b/www/index.html
@@ -280,9 +280,8 @@
             firstName: user.get("firstName"),
             lastName: user.get("lastName"),
             school: user.get("school"),
-            firstName: user.get("picUrl"),
             fullName: function() {
-              return this.firstName + " " + this.lastName;
+              return "" + this.firstName + " " + this.lastName;
             }
           }
 
