added find a school page. check out main.js.

--- a/www/index.html
+++ b/www/index.html
@@ -28,7 +28,7 @@
               <div class="item-inner">My Profile</div>
             </li>
           </a>
-          <a href="#" class="panel-close item-link no-chevron">
+          <a href="/school-search-page/" class="panel-close item-link no-chevron">
             <li class="item-content">
               <div class="item-media"><i class="material-icons gradient-icon">school</i></div>
               <div class="item-inner">Change School</div>
