--- a/www/pages/preview_chat.html
+++ b/www/pages/preview_chat.html
@@ -29,6 +29,7 @@
   </div>
 
   <div class="chat-description">
+    <div class="hairline"></div>
     <p>this is a chat description. this is a chat description. this is a chat description. this is a chat description. this is a chat description.</p>
   </div>
 
