--- a/www/pages/chat.html
+++ b/www/pages/chat.html
@@ -35,8 +35,10 @@
       </div><a class="link send-link" href="#">Send</a>
     </div>
   </div>
-  <div class="page-content messages-content">
+  <div class="page-content messages-content infinite-scroll-content infinite-scroll-top">
+    <div class="preloader infinite-scroll-preloader"></div>
     <div class="messages">
+
       <!-- Messages title -->
       <div class="messages-title"><b>Sunday, Feb 9,</b> 12:58</div>
       <!-- Messages -->
