finished new chat (with bugs)

--- a/www/pages/preview_chat.html
+++ b/www/pages/preview_chat.html
@@ -36,7 +36,7 @@
 
   <div class="toolbar toolbar-bottom">
     <div class="toolbar-inner justify-content-center">
-      <a onclick="subscribeToChat()" class="link">Subscribe to Chat</a>
+      <a onclick="subscribeToChat(User.uid,currentChat)" class="link">Subscribe to Chat</a>
     </div>
   </div>
 
