--- a/www/pages/new_chat.html
+++ b/www/pages/new_chat.html
@@ -7,7 +7,7 @@
         </a>
       </div>
       <div class="title">New Group Chat</div>
-      <div class="right"><a href="#" class="link">CREATE</a></div>
+      <div class="right"><a href="#" onclick="createChat()" class="link">CREATE</a></div>
     </div>
   </div>
   <div class="page-content">
@@ -18,7 +18,7 @@
             <div class="item-inner">
               <div class="item-title item-floating-label">Chat Name</div>
               <div class="item-input-wrap">
-                <input id="event-name" type="text">
+                <input id="chat-name" type="text">
                 <span class="input-clear-button"></span>
               </div>
             </div>
@@ -27,7 +27,7 @@
             <div class="item-inner">
               <div class="item-title item-floating-label">Description</div>
               <div class="item-input-wrap">
-                <textarea id="event-description" class="resizable"></textarea>
+                <textarea id="chat-description" class="resizable"></textarea>
                 <span class="input-clear-button"></span>
               </div>
             </div>
@@ -35,12 +35,12 @@
         </ul>
       </div>
       <h2>Add People</h2>
-      <div class="block no-margin-top">
+      <div id="chips-div" class="block no-margin-top">
         <div class="chip">
           <div class="chip-media">
             <div class="chip-pic" style="background-image: url('https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png')"></div>
           </div>
-          <div class="chip-label">Jane Doe</div><a href="#" class="chip-delete"></a>
+          <div class="chip-label">Jane Smith</div>
         </div>
       </div>
       <div class="hairline"></div>
@@ -56,16 +56,25 @@
       </form>
       <div id="new-chat-members-list" class="list members-list searchbar-found no-hairlines no-hairlines-between no-margin-top">
         <ul>
-          <a href="#" class="item-link no-chevron">
+          <a href="#" onclick="addChip(this)" class="item-link no-chevron" data-uid="test" data-checked="0" data-name="Krombopulos Mike"
+            data-pic="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/dd/dd09204def1578ac0edc13b5ffc1df4b6730f4bd_full.jpg" data-checked="0">
             <li class="item-content">
-              <div class="item-media"><i class="material-icons gradient-icon">person</i></div>
+              <div class="item-media">
+                <div class="li-profile-pic" style="background-image: url('https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/dd/dd09204def1578ac0edc13b5ffc1df4b6730f4bd_full.jpg')"></div>
+              </div>
               <div class="item-inner">Krombopulos Mike</div>
+              <div id="right" class="right"></div>
             </li>
           </a>
-          <a href="#" class="item-link no-chevron">
+          <a href="#" onclick="addChip(this)" class="item-link no-chevron" data-uid="test1" data-checked="0" data-name="Bob Rosspool"
+            data-pic="https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png">
             <li class="item-content">
-              <div class="item-media"><i class="material-icons gradient-icon">person</i></div>
-              <div class="item-inner">Jane Smith</div>
+              <div class="item-media">
+                <div class="li-profile-pic" style="background-image: url('https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png')"></div>
+
+              </div>
+              <div class="item-inner">Bob Rosspool</div>
+              <div id="right" class="right"></div>
             </li>
           </a>
 
