--- a/www/index.html
+++ b/www/index.html
@@ -236,6 +236,7 @@
   </div>
 
 
+  <script type="text/javascript" src="js/cordova.js"></script>
   <script type="text/javascript" src="js/framework7.bundle.js"></script>
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/chats.js"></script>
