--- a/www/index.html
+++ b/www/index.html
@@ -247,16 +247,13 @@
 
 
   <!-- Firebase stuff-->
-  <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-auth.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.9.4/firebase-database.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/5.9.3/firebase-firestore.js"></script>
+  <script src="js/firebase/firebase-app.js"></script>
+  <script src="js/firebase/firebase-auth.js"></script>
+  <script src="js/firebase/firebase-database.js"></script>
+  <script src="js/firebase/firebase-firestore.js"></script>
 
 
   <script>
-    var firebase = require("firebase/app");
-
-
     var firebaseConfig = {
 
       apiKey: "AIzaSyBUSM_BAQ81dWuIdGJEyIPWcGul6LQ4HEw",
