--- a/www/index.html
+++ b/www/index.html
@@ -280,22 +280,39 @@
         console.log(uid);
         //TODO if user has no school redirict to school selection page
         db.collection("users").doc(uid).get().then(function(user) {
-          User = {
-            uid: uid,
-            firstName: user.get("firstName"),
-            lastName: user.get("lastName"),
-            school: user.get("school"),
-            fullName: function() {
-              return "" + this.firstName + " " + this.lastName;
-            },
-            chats: db.collection("users").doc(uid).collection("chats").get()
+          if (user.exists) {
+            User = {
+              uid: uid,
+              firstName: user.get("firstName"),
+              lastName: user.get("lastName"),
+              school: user.get("school"),
+              fullName: function() {
+                return "" + this.firstName + " " + this.lastName;
+              },
+              chats: db.collection("users").doc(uid).collection("chats").get()
+
+            }
+            loadSchoolEvents();
+            loadSchoolChats();
+            loadSubscribedChats();
+            //addMessage("school of ross", "room1", "hi this is the message you should be reading ");
+            //  loadChatMessages("school of ross", "room1");
+          } else { //Create new user data
+
+            console.log("No user data document!");
+            db.collection("users").doc(uid).set({
+                firstName: "First Name",
+                lastName: "Last Name",
+                school: "null"
+              })
+              .then(function() {
+                console.log("user data successfully updated!");
+              })
+              .catch(function(error) {
+                console.error("Error updating user data: ", error);
+              });
 
           }
-          loadSchoolEvents();
-          loadSchoolChats();
-          loadSubscribedChats();
-          //addMessage("school of ross", "room1", "hi this is the message you should be reading ");
-          //  loadChatMessages("school of ross", "room1");
         });
 
         //close the login screen if it is open
