--- a/www/index.html
+++ b/www/index.html
@@ -280,7 +280,7 @@
         console.log(uid);
         //TODO if user has no school redirict to school selection page
         db.collection("users").doc(uid).get().then(function(user) {
-          if (user.exists) {
+          if (user.exists) { //If the user data exists load the user data
             User = {
               uid: uid,
               firstName: user.get("firstName"),
@@ -290,14 +290,13 @@
                 return "" + this.firstName + " " + this.lastName;
               },
               chats: db.collection("users").doc(uid).collection("chats").get()
-
             }
             loadSchoolEvents();
             loadSchoolChats();
             loadSubscribedChats();
             //addMessage("school of ross", "room1", "hi this is the message you should be reading ");
             //  loadChatMessages("school of ross", "room1");
-          } else { //Create new user data
+          } else { //If the user data does not exist create new user data
 
             console.log("No user data document!");
             db.collection("users").doc(uid).set({
@@ -306,7 +305,7 @@
                 school: "null"
               })
               .then(function() {
-                console.log("user data successfully updated!");
+                console.log("user data successfully created!");
               })
               .catch(function(error) {
                 console.error("Error updating user data: ", error);
