Fixed change school page and signup page redirect

--- a/www/pages/school_search.html
+++ b/www/pages/school_search.html
@@ -13,10 +13,10 @@
   <div class="page-content" style="background-color: #edeff2">
     <div class="block no-margin-top">
       <div class="block">
-        <div class="card-block" style="border-radius: 20px; margin: 16px 64px">
+        <div class="card-block" style="border-radius: 20px; margin: 16px 32px">
           <div class="row" style="display:flex; align-items: center;">
             <div class="left" style="margin-left:8px">
-              <input id="school-zip" type="text" placeholder="Search by zip code">
+              <input id="school-zip" type="text" placeholder="Search">
             </div>
             <div class="right" style="display:flex; align-items: center;"><a onclick="searchSchools()" class="link"><i class="material-icons">search</i></a></div>
           </div>
@@ -24,53 +24,8 @@
       </div>
       <div class="list no-hairlines" style=" background-color: #edeff2">
         <ul id="schools-list" style=" background-color: #edeff2">
-          <li class="card-block">
-            <div class="title">Griffin Avenue Elementary</div>
-            <div class="hairline"></div>
-            <div class="school-attributes">
-              <p>2025 Griffin Ave, Los Angeles, CA</p>
-              <p>Level: Elementary</p>
-            </div>
-            <button class="button">Select this School</button>
-          </li>
-          <li class="card-block">
-            <div class="title">Griffin Avenue Elementary</div>
-            <div class="hairline"></div>
-            <div class="school-attributes">
-              <p>2025 Griffin Ave, Los Angeles, CA</p>
-              <p>Level: Elementary</p>
-            </div>
-            <button class="button">Select this School</button>
-          </li>
-          <li class="card-block">
-            <div class="title">Griffin Avenue Elementary</div>
-            <div class="hairline"></div>
-            <div class="school-attributes">
-              <p>2025 Griffin Ave, Los Angeles, CA</p>
-              <p>Level: Elementary</p>
-            </div>
-            <button class="button">Select this School</button>
-          </li>
-          <li class="card-block">
-            <div class="title">Griffin Avenue Elementary</div>
-            <div class="hairline"></div>
-            <div class="school-attributes">
-              <p>2025 Griffin Ave, Los Angeles, CA</p>
-              <p>Level: Elementary</p>
-            </div>
-            <button class="button">Select this School</button>
-          </li>
-          <li class="card-block">
-            <div class="title">Griffin Avenue Elementary</div>
-            <div class="hairline"></div>
-            <div class="school-attributes">
-              <p>2025 Griffin Ave, Los Angeles, CA</p>
-              <p>Level: Elementary</p>
-            </div>
-            <button class="button">Select this School</button>
-          </li>
-
-
+          <p>Search for your school by zip code or school name.</p>
+          <p> e.g. 85024, School of Ross</p>
         </ul>
       </div>
     </div>
