--- a/www/pages/new_chat.html
+++ b/www/pages/new_chat.html
@@ -1,9 +1,9 @@
-<div class="page" data-page="chat">
+<div class="page" data-page="new-chat">
   <div class="navbar no-shadow no-harline">
     <div class="navbar-inner">
       <div class="left">
         <a class="link icon-only back">
-          <i class="material-icons">arrow_back</i>
+          <i class="material-icons">close</i>
         </a>
       </div>
       <div class="title">New Group Chat</div>
