--- a/www/pages/new_event.html
+++ b/www/pages/new_event.html
@@ -1,17 +1,18 @@
 <div class="page" data-page="new-event">
-  <div class="page-content testclass">
-
-    <div class="block no-margin-top">
-      <div class="row" style="display:flex;  align-items: center;">
-        <div class="left">
-          <h1>New Event</h1>
-        </div>
-        <div class="right">
-          <a class="link icon-only back">
-            <i class="material-icons">close</i>
-          </a>
-        </div>
+  <div class="navbar no-shadow no-harline">
+    <div class="navbar-inner">
+      <div class="left">
+        <a class="link icon-only back">
+          <i class="material-icons">close</i>
+        </a>
       </div>
+      <div class="title">New Event</div>
+      <div class="right"><a href="#" onclick="createNewEvent()" class="link">CREATE</a></div>
+    </div>
+  </div>
+  <div class="page-content">
+
+    <div class="block">
       <div class="row">
         <div class="col-33">
           <div id="event-image" class="event-image" style="background-image: url(media/stock/event_pattern.jpg)">
@@ -73,28 +74,58 @@
             </li>
           </ul>
         </div>
-        <div class="list no-hairlines">
-          <ul>
-            <li class="no-hairlines">
-              <a class="item-link smart-select smart-select-init" data-open-in="popup" data-searchbar="true" data-searchbar-placeholder="Search People">
-                <select name="Invite People" multiple>
-                  <option value="USERID" data-option-image="https://cdn.framework7.io/placeholder/abstract-29x29-2.jpg">Bob</option>
-                </select>
-                <div class="item-content">
-                  <div class="item-inner">
-                    <div class="item-title">Invite People</div>
-                  </div>
-                </div>
-              </a>
-            </li>
-          </ul>
+      </div>
+
+      <h2>Add People</h2>
+      <div id="chips-div" class="block no-margin-top">
+        <div class="chip">
+          <div class="chip-media">
+            <div class="chip-pic" style="background-image: url('https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png')"></div>
+          </div>
+          <div class="chip-label">Jane Smith</div>
         </div>
       </div>
-      <div class="row justify-content-center">
-        <a onclick="createNewEvent()" class="button button-fill back">Add Event</a>
+      <div class="hairline"></div>
+      <form id="new-event-searchbar" class="searchbar searchbar-inline">
+        <div class="searchbar-inner">
+          <div class="searchbar-input-wrap">
+            <input type="search" placeholder="Search">
+            <i class="searchbar-icon"></i>
+            <span class="input-clear-button"></span>
+          </div>
+          <span class="searchbar-disable-button if-not-aurora">Cancel</span>
+        </div>
+      </form>
+      <div id="new-event-members-list" class="list members-list searchbar-found no-hairlines no-hairlines-between no-margin-top">
+        <ul>
+          <a href="#" onclick="addChip(this)" class="item-link no-chevron" data-uid="test" data-checked="0" data-name="Krombopulos Mike"
+            data-pic="https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/dd/dd09204def1578ac0edc13b5ffc1df4b6730f4bd_full.jpg" data-checked="0">
+            <li class="item-content">
+              <div class="item-media">
+                <div class="li-profile-pic" style="background-image: url('https://steamcdn-a.akamaihd.net/steamcommunity/public/images/avatars/dd/dd09204def1578ac0edc13b5ffc1df4b6730f4bd_full.jpg')"></div>
+              </div>
+              <div class="item-inner">Krombopulos Mike</div>
+              <div id="right" class="right"></div>
+            </li>
+          </a>
+          <a href="#" onclick="addChip(this)" class="item-link no-chevron" data-uid="test1" data-checked="0" data-name="Bob Rosspool"
+            data-pic="https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png">
+            <li class="item-content">
+              <div class="item-media">
+                <div class="li-profile-pic" style="background-image: url('https://media.golfdigest.com/photos/5a0c8a63d14646526333dbe2/master/w_768,c_limit/Screen%2520Shot%25202017-11-15%2520at%25201.41.19%2520PM.png')"></div>
 
+              </div>
+              <div class="item-inner">Bob Rosspool</div>
+              <div id="right" class="right"></div>
+            </li>
+          </a>
+
+        </ul>
       </div>
-
+      <!-- Nothing found message -->
+      <div class="block searchbar-not-found">
+        <div class="block-inner">Nothing found</div>
+      </div>
     </div>
   </div>
 </div>
