Large Changes on login & signup pages. minor bug fixes too.

--- a/www/index.html
+++ b/www/index.html
@@ -51,6 +51,16 @@
               <div class="item-inner">Sign Out</div>
             </li>
           </a>
+
+
+
+          <a href="/welcome-page/" class="panel-close item-link no-chevron">
+            <li class="item-content">
+              <div class="item-media"><i class="material-icons gradient-icon">add</i></div>
+              <div class="item-inner">Welcome</div>
+            </li>
+          </a>
+
         </ul>
       </div>
     </div>
