--- a/www/pages/edit_profile.html
+++ b/www/pages/edit_profile.html
@@ -52,6 +52,7 @@
         </ul>
       </div>
       <button class="button" onclick="editUserData()">Save</button>
+      <p id="error-message" style="color: red; text-align: center; padding-top: 8px;">this is an error message</p>
     </div>
   </div>
 </div>
