--- a/www/pages/signup.html
+++ b/www/pages/signup.html
@@ -1,36 +1,59 @@
 <div class="page no-navbar no-toolbar no-swipeback">
-    <div class="page-content login-screen-content">
-        <div class="login-screen-title">Sign Up</div>
-        <div class="row justify-content-center"><img style="width: 100px" src="https://img.icons8.com/nolan/384/sign-up.png"></div>
-        
-        <form>
-            <div class="list">
-                <ul>
-                    <li class="item-content item-input">
-                        <div class="item-inner">
-                            <div class="item-title item-label">Email</div>
-                            <div class="item-input-wrap">
-                                <input id="email" type="text" name="email" placeholder="Your email">
-                            </div>
-                        </div>
-                    </li>
-                    <li class="item-content item-input">
-                        <div class="item-inner">
-                            <div class="item-title item-label">Password</div>
-                            <div class="item-input-wrap">
-                                <input id="newpword" type="password" name="password" placeholder="Your password">
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-            <div class="block">
-                <div class="block-footer">
-                    <a class="link" onclick="signUp()">Sign Up</a>
-                    <p id="newerrmsg" style="color: red;"></p>
-                    <p>Already a user? <a href="/login-screen/" class="link">Sign In</a></p>
-                </div>
-            </div>
-        </form>
+  <div class="page-content login-screen-content">
+
+    <div class="login-screen-title">Sign Up</div>
+    <div class="row justify-content-center">
+      <div class="login-icon">
+        <div class="square"></div>
+        <div class="arrow-head"></div>
+        <div class="arrow-tail"></div>
+      </div>
     </div>
+    <div class="center-vertically">
+
+      <div class="block">
+        <form>
+          <div class="list">
+            <ul>
+              <li class="item-content item-input">
+                <div class="item-inner">
+                  <div class="item-input-wrap">
+                    <input id="email" type="text" placeholder="Email address">
+                  </div>
+                </div>
+              </li>
+              <li class="item-content item-input">
+                <div class="item-inner">
+                  <div class="item-input-wrap">
+                    <input id="newpword" type="password" placeholder="Password">
+                  </div>
+                </div>
+              </li>
+              <li class="item-content item-input">
+                <div class="item-inner">
+                  <div class="item-input-wrap">
+                    <input id="firstName" type="text" placeholder="First name">
+                  </div>
+                </div>
+              </li>
+              <li class="item-content item-input">
+                <div class="item-inner">
+                  <div class="item-input-wrap">
+                    <input id="lastName" type="text" placeholder="Last name">
+                  </div>
+                </div>
+              </li>
+            </ul>
+          </div>
+          <div class="block">
+            <div class="block-footer">
+              <a class="button button-fill button-round" onclick="signUp()">Sign Up</a>
+              <p id="newerrmsg" style="color: red;"></p>
+              <p>Already a user? <a href="/login-screen/" class="link">Sign In</a></p>
+            </div>
+          </div>
+        </form>
+      </div>
+    </div>
+  </div>
 </div>
